my_ros_ws/log/build_2024-04-28_13-24-42/motor_ctl/stderr.log
  File "/home/group1/my_ros_ws/install/motor_ctl/lib/python3.10/site-packages/motor_ctl/subscriber.py", line 101
    		print('moving egg)
    		      ^
SyntaxError: unterminated string literal (detected at line 101)

